--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ The journal app will be for people who want to get into journaling, but have a h
 <a href="https://projects.invisionapp.com/prototype/cjwd81hb400638n01xrkno130/play">Click for Invision prototype</a>
 
 <h2>Presentation</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VoacoCmKnr0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
 </body>
 </html>
