--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <h1>Everyday Journal</h1>
 <hr>
 <h2>Design Statement</h2>
-The journal app will be for people who want to get into journaling, but have a hard time with it. The most commonly stated problems for journaling is accountability and not knowing what to write. The journal will provide random prompts for the journal entry if the user needs it. There is a feature to add friends on the app, in which friends can see whether someone has inputted an entry that day to keep each other accountable. 
+The journal app will be for people who want to get into journaling, but have a hard time with it. The most commonly stated problems for journaling is accountability and not knowing what to write. The journal will provide random prompts for the journal entry if the user needs it. There is a feature to add friends on the app, in which friends can see whether someone has inputted an entry that day to keep each other accountable. <br>
+    According to a 2017 UC Berkeley study, habitual gratitude can help reduce toxic emotions associated with depression and help positively restructure the brain. Journaling can be one of the ways to build gratitude habits. This journal aims to elevate its users' quality of life. 
 
 <h2>Design Solution</h2>
     <h3>Persona & Scenario</h3>
